<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivPhoto"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <LinearLayout
        android:id="@+id/Llayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPhoto">

        <Button
            android:id="@+id/btnGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_gallery"
            android:layout_margin="10dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveImage"
            android:layout_margin="10dp"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <com.google.android.material.slider.Slider
        android:id="@+id/slBrightness"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:contentDescription="@string/brightness_slider"
        android:stepSize="10"
        android:value="0"
        android:valueFrom="-250"
        android:valueTo="250"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/brLabel"
        app:layout_constraintTop_toBottomOf="@+id/Llayout"
        app:layout_constraintLeft_creator="@android:integer/config_longAnimTime"/>

    <TextView
        android:id="@+id/brLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brightness_slider_label"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/slBrightness"
        app:layout_constraintTop_toTopOf="@+id/slBrightness" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slContrast"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:contentDescription="@string/contrast_slider"
        android:stepSize="10"
        android:value="0"
        android:valueFrom="-250"
        android:valueTo="250"
        app:layout_constraintEnd_toEndOf="@+id/slBrightness"
        app:layout_constraintStart_toStartOf="@+id/slBrightness"
        app:layout_constraintTop_toBottomOf="@+id/slBrightness"
        app:layout_constraintLeft_creator="@android:integer/config_longAnimTime"/>

    <TextView
        android:id="@+id/coLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contrast_slider_label"
        app:layout_constraintStart_toStartOf="@+id/brLabel"
        app:layout_constraintBottom_toBottomOf="@id/slContrast"
        app:layout_constraintTop_toTopOf="@+id/slContrast" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slSaturation"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:contentDescription="@string/saturation_slider"
        android:stepSize="10"
        android:value="0"
        android:valueFrom="-250"
        android:valueTo="250"
        app:layout_constraintEnd_toEndOf="@+id/slContrast"
        app:layout_constraintStart_toStartOf="@+id/slContrast"
        app:layout_constraintTop_toBottomOf="@+id/slContrast"
        app:layout_constraintLeft_creator="@android:integer/config_longAnimTime"/>

    <TextView
        android:id="@+id/saLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saturation_slider_label"
        app:layout_constraintStart_toStartOf="@+id/coLabel"
        app:layout_constraintBottom_toBottomOf="@id/slSaturation"
        app:layout_constraintTop_toTopOf="@+id/slSaturation" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slGamma"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:contentDescription="@string/gamma_slider"
        android:stepSize="0.2"
        android:value="1"
        android:valueFrom="0.2"
        android:valueTo="4"
        app:layout_constraintEnd_toEndOf="@+id/slSaturation"
        app:layout_constraintStart_toStartOf="@+id/slSaturation"
        app:layout_constraintTop_toBottomOf="@+id/slSaturation"
        app:layout_constraintLeft_creator="@android:integer/config_longAnimTime"/>

    <TextView
        android:id="@+id/gaLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gamma_slider_label"
        app:layout_constraintStart_toStartOf="@+id/saLabel"
        app:layout_constraintBottom_toBottomOf="@id/slGamma"
        app:layout_constraintTop_toTopOf="@+id/slGamma" />
</androidx.constraintlayout.widget.ConstraintLayout>